Changed css styles

--- a/src/app/register-admin/register-admin.component.css
+++ b/src/app/register-admin/register-admin.component.css
@@ -1,9 +1,10 @@
+
 .background-image {
   background-image: url('https://t3.ftcdn.net/jpg/04/87/69/28/360_F_487692869_V8MZ1hLvhXQZKT50EV8Sh13AkdibGJb3.jpg');
-  background-size: 110%;
+  background-size: cover; /* This will make the image cover the entire container */
   background-repeat: no-repeat;
   background-position: center;
-  height: 90vh;
+  height: 100vh; /* Set the height of the container to the full viewport height */
   display: flex;
   align-items: center;
 }
