--- a/src/app/register-admin/register-admin.component.html
+++ b/src/app/register-admin/register-admin.component.html
@@ -1,4 +1,5 @@
 <app-dashboard></app-dashboard>
+<div class="body">
 <div class="background-image">
 <div class="container">
   <h2> Admin Registeration</h2>
@@ -21,4 +22,5 @@
     <button type="submit" class="btn btn-primary">Register</button>
   </form>
 </div> 
+</div>
 </div>
