--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,4 @@
-<nav>
-	<ul>
-		<li
-			style="color: rgb(146, 146, 146);float: left;font-size: 24px;padding-left: 20px;font-style:italic;font-weight: bold;">
-			Unity Hospital</li>
-		<li><a routerLink="/home">Home</a></li>
-		<li><a routerLink="/login">Patient Login</a></li>
-		<li><a routerLink="/admin-login">Admin Login</a></li>
-		<li><a routerLink="/register">Patient Register</a></li>
-		<li><a routerLink="/registeradmin">Admin Register</a></li>
-	</ul>
-</nav>
-<router-outlet></router-outlet>
-
+<app-dashboard></app-dashboard>
 <div class="wrapper">
 
 	<div id="slide">
